# anime-embedded

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
core/: __init__.py  main.py  utils.py
tests/: conftest.py  test_main.py
